fix(ui): site is now 100% width on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -86,6 +86,7 @@ html {
 html,
 body {
 	height: 100%;
+	max-width: 100%;
 }
 
 html {
